# h3o-numa

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HELP.md  README.md  benchmark_results.md  gen_cells_zstd.sh  numa-mon.sh  runzip.sh
.cursor/rules/: h3o-numa-optimization-rules.md
.github/workflows/: sync-upstream.yml
benches/h3/: are_neighbor_cells.rs  are_neighbor_cells_h3o_vs_h3on.rs  cell_area.rs  cell_range.rs  cell_to_boundary.rs  cell_to_center_child.rs  cell_to_child_pos.rs  cell_to_children.rs  cell_to_children_size.rs  cell_to_latlng.rs  cell_to_local_ij.rs  cell_to_parent.rs  cell_to_vertex.rs  cell_to_vertexes.rs  cells_to_directed_edge.rs  child_pos_to_cell.rs  compact_cells.rs  degs_to_rads.rs  directed_edge_to_boundary.rs  directed_edge_to_cells.rs  edge_length.rs  get_base_cell_number.rs  get_directed_edge_destination.rs  get_directed_edge_origin.rs  get_hexagon_area_avg.rs  get_hexagon_edge_length_avg.rs  get_icosahedron_faces.rs  get_num_cells.rs  get_pentagons.rs  get_res0_cells.rs  get_resolution.rs  great_circle_distance.rs  grid_disk.rs  grid_disk_distances.rs  grid_disk_distances_safe.rs  grid_disk_distances_unsafe.rs  grid_disk_unsafe.rs  grid_disks_unsafe.rs  grid_distance.rs  grid_path_cells.rs  (+26 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cell_index.rs  cell_index_hierarchy.rs  cell_index_pair.rs  cell_to_vertex.rs  cells_to_geom.rs  compact.rs  directed_edge_index.rs  grid.rs  index_io.rs  is_valid.rs  latltng_to_cell.rs  local_ij.rs  polygon_to_cells.rs  polygon_with_holes_to_cells.rs  uncompact.rs  vertex_index.rs
src/: base_cell.rs  direction.rs  face.rs  lib.rs  parallel.rs  resolution.rs
src/coord/: latlng.rs
src/error/: mod.rs
src/geom/: mod.rs  plotter.rs  solvent.rs  tiler.rs
src/index/: cell.rs  edge.rs  vertex.rs
src/numa/: mod.rs  pool.rs  topo.rs
tests/: numa_integration_test.rs
tests/api/: avg_edge_len.rs  base_cell.rs  boundary.rs  cell_index.rs  directed_edge_index.rs  direction.rs  edge.rs  face.rs  face_set.rs  index_mode.rs  latlng.rs  localij.rs  mod.rs  resolution.rs  vertex.rs  vertex_index.rs
tests/api/geom/: plotter.rs  solvent.rs  (+2 more)
tests/h3/: are_neighbor_cells.rs  cell_area_km2.rs  cell_area_m2.rs  cell_area_rads2.rs  cell_to_boundary.rs  cell_to_center_child.rs  cell_to_child_pos.rs  cell_to_children.rs  cell_to_children_size.rs  cell_to_latlng.rs  cell_to_local_ij.rs  cell_to_parent.rs  cell_to_vertex.rs  cell_to_vertexes.rs  cells_to_directed_edge.rs  child_pos_to_cell.rs  compact_cells.rs  directed_edge_to_boundary.rs  directed_edge_to_cells.rs  edge_length_km.rs  edge_length_m.rs  edge_length_rads.rs  get_base_cell_number.rs  get_directed_edge_destination.rs  get_directed_edge_origin.rs  get_hexagon_area_avg_km2.rs  get_hexagon_area_avg_m2.rs  get_hexagon_area_avg_rads2.rs  get_icosahedron_faces.rs  get_num_cells.rs  get_pentagons.rs  get_res0_cells.rs  get_resolution.rs  great_circle_distance_km.rs  great_circle_distance_m.rs  great_circle_distance_rads.rs  grid_disk.rs  grid_disk_distances.rs  grid_disk_distances_safe.rs  grid_disk_distances_unsafe.rs  (+24 more)
tools/: average_edge_length.rs  gen_index_stdout.rs  read_zst_cells.rs
