[package]
name = "h3on"
version = "0.9.3"
authors = ["Sylvain Laperche <sylvain.laperche@gmail.com>"]
edition = "2024"
description = "A Rust implementation of the H3 geospatial indexing system."
documentation = "https://docs.rs/h3on/"
readme = "README.md"
homepage = "https://docs.rs/h3on"
repository = "https://github.com/HydroniumLabs/h3on"
license = "BSD-3-Clause"
keywords = ["geography", "geospatial", "gis", "h3", "spatial-index"]
categories = ["science::geo", "no-std"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.release]
pre-release-commit-message = "release {{version}}"
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
]

[features]
default = ["std", "numa"]
std = ["dep:ahash"]
geo = ["dep:geo"]
serde = ["dep:serde", "dep:serde_repr"]
tools = ["polyfit-rs"]
typed_floats = ["dep:typed_floats"]
zstd = ["dep:zstd"]
rayon = ["dep:rayon"]
numa = ["dep:num_cpus", "dep:once_cell", "dep:hwlocality", "dep:core_affinity", "rayon", "zstd"]

[dependencies]
ahash = { version = "0.8", optional = true, default-features = false, features = ["std", "compile-time-rng"] }
arbitrary = { version = "1.0", optional = true, default-features = false }
either = { version = "1.0", default-features = false }
float_eq = { version = "1.0", default-features = false }
geo = { version = "0.31", optional = true, default-features = false }
h3o-bit = { version = "0.1", default-features = false }
libm = { version = "0.2", default-features = false }
polyfit-rs = { version = "0.2", optional = true, default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
serde_repr = { version = "0.1", optional = true, default-features = false }
typed_floats = { version = "1.0", optional = true, default-features = false }
h3ron-h3-sys = "0.17"
rayon = { version = "1.8", optional = true }
hwlocality = { version = "1.0.0-alpha.11", optional = true }
core_affinity = { version = "0.8", optional = true }
once_cell = { version = "1.21", optional = true }
num_cpus = { version = "1.17", optional = true }
zstd = { version = "0.13.3", optional = true }

[dev-dependencies]
approx = { version = "0.5", default-features = false }
criterion = { version = "0.7", default-features = false, features = ["plotters", "cargo_bench_support", "html_reports"] }
geojson = { version = "0.24", default-features = false, features = ["geo-types"] }
h3ron-h3-sys = { version = "0.17", default-features = false }
rand = { version = "0.9", default-features = false, features = ["std", "std_rng"] }

[[bin]]
name = "average_edge_length"
path = "tools/average_edge_length.rs"
required-features = ["tools"]

[[bin]]
name = "read_zst_cells"
path = "tools/read_zst_cells.rs"
required-features = ["zstd"]

[[bench]]
harness = false
name = "h3"

[profile.release]
lto = "thin"
